--- a/angular_project/angular-practice/src/app/product-list/product-list.component.html
+++ b/angular_project/angular-practice/src/app/product-list/product-list.component.html
@@ -1,3 +1,21 @@
 <p>
   product-list works!
 </p>
+<div>
+  <table style="width:100%">
+      <tr>
+        <th>Product Id</th> 
+        <th>Product Name</th>
+        <th>Product Description</th>
+        <th>Quantity Available</th>
+        <th>Unit Price</th>
+      </tr>
+      <tr *ngFor="let product of products">
+          <td>{{product.Id}}</td>
+          <td>{{product.ProductName}}</td>
+          <td>{{product.Description}}</td>
+          <td>{{product.Quantity}}</td>
+          <td>{{product.UnitPrice}}</td>
+      </tr>
+  </table>
+</div>
